objects/Facilitator_Rating__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exceptional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exceptional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Facilitator_Name__c</fullName>
        <label>Facilitator Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Facilitator_Rating</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feedback_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Feedback Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feedback_Source__c</fullName>
        <label>Feedback Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Account Executive</fullName>
                </value>
                <value>
                    <fullName>Account Manager</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>SAR</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback_Type__c</fullName>
        <label>Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Postive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Open_Enrollment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Open Enrollment</label>
        <referenceTo>SFDC_Volunteer_Event__c</referenceTo>
        <relationshipName>Facilitator_Rating</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Legacy_FACPerfID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SFDC Legacy FACPerfID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Facilitator_Rating</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Watch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Watch</label>
        <type>Checkbox</type>
    </fields>
    <label>Facilitator Performance History</label>
    <nameField>
        <displayFormat>FPH-{000}</displayFormat>
        <label>Facilitator Performance History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facilitator Performance History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>